# swampd

./: .gitignore  Cargo.toml  DEVELOPMENT.md  README.md
.github/workflows/: build.yml  release.yml
examples/small/scripts/: main.swamp
scripts/: clippy.sh  send.py  swampd.service
src/: ini.rs  main.rs  scan.rs
