[package]
name = "swampd"
version = "0.0.1"
edition = "2024"
description = "Lightweight UDP‑based server embedding the Swamp scripting VM with built‑in key‑value storage"
license = "MIT"
repository = "https://github.com/swamp/swampd"
keywords = ["swamp", "scripting", "udp", "server", "rpc"]
categories = ["network-programming", "asynchronous"]

[dependencies]

swamp = { path = "../swamp/crates/swamp", version = "0.2.14" }
swamp-runtime = { path = "../swamp/crates/runtime", version = "0.2.14" }
swamp-std = { path = "../swamp/crates/std", version = "0.2.14" }
frag-datagram = { path = "../../piot/frag-datagram", version="0.0.1" }
source-map-cache = "0.0.6"

tracing = "0.1.41"
pico-args = "0.5.0"
redis = "0.32.4"
seq-map = "0.0.14"
bytemuck = { version = "1.23.1", features = ["derive"] }
